--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="circle">1</div>
         <div class="step-text">
           <h3>Daftar Akun Exness</h3>
-          <p>Daftar akun Exness melalui link berikut: <a href="https://one.exnesstrack.org/boarding/sign-up/a/d8f5pvzdnm?lng=id" target="_blank">Klik di sini</a></p>
+          <p>Daftar akun Exness melalui link berikut: <a href="https://one.exnessonelink.com/boarding/sign-up/a/d8f5pvzdnm?lng=id" target="_blank">Klik di sini</a></p>
         </div>
       </div>
       <div class="step">
