--- a/index.html
+++ b/index.html
@@ -49,8 +49,15 @@
       <div class="step">
         <div class="circle">1</div>
         <div class="step-text">
-          <h3>Daftar Akun Exness</h3>
-          <p>Daftar akun Exness melalui link berikut: <a href="https://one.exnessonelink.com/boarding/sign-up/a/d8f5pvzdnm?lng=id" target="_blank">Klik di sini</a></p>
+          <h3>Daftar Salah Satu Broker Di Bawah Ini</h3>
+         <p>Daftar akun <strong>EXNESS</strong> melalui link berikut:
+  <a href="https://one.exnessonelink.com/boarding/sign-up/a/d8f5pvzdnm?lng=id" target="_blank">Klik di sini</a>
+</p>
+
+<p>Daftar akun <strong>JustMarkets</strong> melalui link berikut:
+  <a href="https://one.justmarkets.link/a/41pe80jpmm/registration/trader" target="_blank">Klik di sini</a>
+</p>
+
         </div>
       </div>
       <div class="step">
