--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <li>Bisa keluar masuk sesuka hati</li>
             <li>Cocok buat pemula & pro</li>
             <li>Full akses semua fitur</li>
+            <li>Gratis EA untuk Entry one shot</li>
           </ul>
         </div>
       </div>
