--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
           <h3 class="benefit-label green"> Dapatkan Semua Ini Gratis!</h3>
           <ul class="benefit-list">
             <li>Gratisss!!</li>
-            <li>Tidak ada minimum deposit</li>
-            <li>Bisa keluar masuk sesuka hati</li>
-            <li>Cocok buat pemula & pro</li>
-            <li>Full akses semua fitur</li>
-            <li>Gratis EA untuk Entry one shot</li>
+            <li>Tidak ada minimum deposit.</li>
+            <li>Bisa keluar masuk sesuka hati.</li>
+            <li>Cocok buat pemula & pro.</li>
+            <li>Full akses semua fitur.</li>
+            <li>Gratis EA untuk Entry one shot.</li>
           </ul>
         </div>
       </div>
