Update landing page MATARY

--- a/index.html
+++ b/index.html
@@ -568,6 +568,12 @@
   transform:translateY(-2px);
 }
 
+.logo img {
+  height: 36px;
+  width: auto;
+  display: block;
+}
+
 
 
   </style>
@@ -594,14 +600,21 @@
 <!-- NAVBAR -->
 <nav class="navbar">
   <div class="nav-container">
-    <div class="logo">
-  <img src="assets/img/logo-matary.png" alt="MATARY Logo">
-</div>
+
+    <!-- LOGO -->
+    <a href="/" class="logo">
+      <img src="assets/img/logo-matary.png" alt="MATARY Logo">
+    </a>
+
+    <!-- MENU -->
     <ul class="nav-menu">
-      <li><a href="/ea.html" class="active">EA MATARY</a></li>
+      <li><a href="/" class="active">EA MATARY</a></li>
       <li><a href="/join-matary.html">Join MATARY</a></li>
-  </div> 
+    </ul>
+
+  </div>
 </nav>
+
 
 <!-- HERO -->
 <div class="hero">
