--- a/join-matary.html
+++ b/join-matary.html
@@ -271,6 +271,12 @@
   }
 }
 
+.logo img {
+  height: 36px;
+  width: auto;
+  display: block;
+}
+
   </style>
 </head>
 
@@ -279,14 +285,21 @@
 <!-- NAVBAR -->
 <nav class="navbar">
   <div class="nav-container">
-    <div class="logo">
-  <img src="assets/img/logo-matary.png" alt="MATARY Logo">
-</div>
+
+    <!-- LOGO -->
+    <a href="/" class="logo">
+      <img src="assets/img/logo-matary.png" alt="MATARY Logo">
+    </a>
+
+    <!-- MENU -->
     <ul class="nav-menu">
-      <li><a href="index.html">EA MATARY</a></li>
-      <li><a href="join-matary.html" class="active">Join MATARY</a></li>
+      <li><a href="/">EA MATARY</a></li>
+      <li><a href="/join-matary.html" class="active">Join MATARY</a></li>
+    </ul>
+
   </div>
 </nav>
+
 
 <!-- HERO -->
 <section class="join-hero">
