--- a/join-matary.html
+++ b/join-matary.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="/favicon.png" sizes="32x32">
+  <link rel="apple-touch-icon" href="/favicon.png">
   <title>Join Komunitas MATARY</title>
 
   <!-- Google tag (gtag.js) -->
