--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="/favicon.png" sizes="32x32">
-  <link rel="apple-touch-icon" href="/favicon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon.png">
+
   <title>Expert Advisor Forex | Disiplin & Risk Control</title>
   <meta name="description" content="Expert Advisor Forex untuk membantu eksekusi trading lebih disiplin dengan pengaturan risiko yang dapat disesuaikan." />
 
