--- a/index.html
+++ b/index.html
@@ -578,6 +578,35 @@
   display: block;
 }
 
+/* ===== GRATIS ===== */
+.badge-free{
+  display:inline-block;
+  margin-bottom:26px;
+  padding:14px 40px;
+  font-size:1.3rem;
+  font-weight:900;
+  letter-spacing:3px;
+  text-transform:uppercase;
+
+  color:#052e16;
+  background:linear-gradient(90deg,#22c55e,#4ade80);
+  border-radius:999px;
+
+  box-shadow:
+    0 20px 50px rgba(34,197,94,.55),
+    0 0 0 4px rgba(34,197,94,.15);
+}
+
+.badge-free{
+  animation:pulse 2s infinite;
+}
+
+@keyframes pulse{
+  0%{transform:scale(1)}
+  50%{transform:scale(1.05)}
+  100%{transform:scale(1)}
+}
+
 
 
   </style>
@@ -622,13 +651,15 @@
 
 <!-- HERO -->
 <div class="hero">
+  <span class="badge-free">GRATIS</span>
   <h1>Expert Advisor Forex<br>untuk Eksekusi Trading Lebih Disiplin</h1>
   <p>EA ini dirancang sebagai alat bantu untuk menjalankan strategi trading secara konsisten.</p>
 
   <ul>
     <li>✔ Berbasis rule & logic</li>
     <li>✔ Mengurangi human error</li>
-    <li>✔ Bukan janji profit instan</li>
+    <li>✔ Tidak ada license</li>
+    <li>✔ 100% gratis untuk member Matary</li>
   </ul>
 
   <a href="https://t.me/mataryclub" class="btn">Pelajari Cara Kerjanya</a>
