Update landing page MATARY

--- a/join-matary.html
+++ b/join-matary.html
@@ -281,6 +281,45 @@
   display: block;
 }
 
+/* ===========================
+   NOTE KHUSUS EXNESS
+=========================== */
+
+.claim-note {
+  max-width: 820px;
+  margin: 70px auto 0;
+  padding: 26px 30px;
+  border-radius: 18px;
+  background:
+    linear-gradient(180deg, #020617, #020617),
+    radial-gradient(circle at left, rgba(96,165,250,.15), transparent 60%);
+  box-shadow:
+    0 30px 60px rgba(0,0,0,.55),
+    inset 0 0 0 1px rgba(96,165,250,.35);
+}
+
+.claim-note strong {
+  display: block;
+  font-size: 1.15rem;
+  margin-bottom: 10px;
+  color: #60a5fa;
+}
+
+.claim-note p {
+  color: #cbd5f5;
+  line-height: 1.7;
+}
+
+.claim-note a {
+  color: #22c55e;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+.claim-note a:hover {
+  text-decoration: underline;
+}
+
   </style>
 </head>
 
@@ -323,9 +362,9 @@
       <div class="join-card bad">
         <h3>❌ GAK PAKE BAYAR-BAYAR!</h3>
         <ul>
-          <li>✖ Bayar</li>
-          <li>✖ Minimal deposit</li>
-          <li>✖ Langganan</li>
+          <li>✖ tidak Bayar</li>
+          <li>✖ tidak ada Minimal deposit</li>
+          <li>✖ Tidak ada Langganan</li>
         </ul>
       </div>
 
@@ -393,6 +432,15 @@
         <p>Kirim ke <a href="https://t.me/mataryclub" target="_blank">@mataryclub</a></p>
       </div>
     </div>
+
+    <div class="claim-note">
+  <strong>ℹ️ Catatan Penting</strong>
+  <p>
+    Jika Anda <b>sudah memiliki akun broker EXNESS</b>,  
+    silakan langsung chat ke <a href="https://t.me/matary_bot" target="_blank">@matary_bot</a>  
+    lalu pilih perintah <b>/ganti</b> dan ikutin panduannya.
+  </p>
+</div>
 
   </div>
 </section>
