--- a/index.html
+++ b/index.html
@@ -607,6 +607,170 @@
   100%{transform:scale(1)}
 }
 
+/* ===========================
+   CARA KLAIM EA – PREMIUM
+=========================== */
+
+.claim-ea {
+  padding: 140px 20px;
+  position: relative;
+}
+
+.claim-ea::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background:
+    radial-gradient(circle at top, rgba(34,197,94,.08), transparent 60%),
+    radial-gradient(circle at bottom, rgba(96,165,250,.06), transparent 60%);
+  pointer-events: none;
+}
+
+.claim-ea h2 {
+  text-align: center;
+  font-size: 2.4rem;
+  font-weight: 700;
+  background: linear-gradient(90deg, #22c55e, #60a5fa);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 14px;
+}
+
+.claim-ea .subtitle {
+  text-align: center;
+  color: #94a3b8;
+  max-width: 760px;
+  margin: 0 auto 70px;
+  font-size: 1.05rem;
+}
+
+.claim-steps {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 34px;
+  max-width: 1150px;
+  margin: auto;
+}
+
+.claim-step {
+  position: relative;
+  background:
+    linear-gradient(180deg, #020617, #020617),
+    radial-gradient(circle at top, rgba(34,197,94,.08), transparent 60%);
+  border-radius: 22px;
+  padding: 34px 30px;
+  box-shadow:
+    0 30px 60px rgba(0,0,0,.55),
+    inset 0 0 0 1px rgba(34,197,94,.15);
+  transition: all .35s ease;
+}
+
+.claim-step:hover {
+  transform: translateY(-8px);
+  box-shadow:
+    0 40px 80px rgba(0,0,0,.65),
+    inset 0 0 0 1px rgba(34,197,94,.35);
+}
+
+/* NOMOR STEP */
+.step-number {
+  position: absolute;
+  top: -18px;
+  left: 26px;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background: linear-gradient(135deg, #22c55e, #16a34a);
+  color: #052e16;
+  font-size: 1.2rem;
+  font-weight: 800;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 10px 30px rgba(34,197,94,.5);
+}
+
+/* JUDUL STEP */
+.claim-step h3 {
+  margin-top: 18px;
+  margin-bottom: 12px;
+  font-size: 1.25rem;
+  color: #e5e7eb;
+}
+
+/* ISI */
+.claim-step p {
+  color: #cbd5f5;
+  line-height: 1.6;
+}
+
+/* LINK */
+.claim-step a {
+  color: #60a5fa;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.claim-step a:hover {
+  text-decoration: underline;
+}
+
+/* STEP KHUSUS TELEGRAM (LEBIH MENONJOL) */
+.claim-step:last-child {
+  background:
+    linear-gradient(180deg, #020617, #020617),
+    radial-gradient(circle at center, rgba(34,197,94,.18), transparent 65%);
+  box-shadow:
+    0 40px 90px rgba(34,197,94,.25),
+    inset 0 0 0 1px rgba(34,197,94,.45);
+}
+
+.claim-step:last-child h3 {
+  color: #22c55e;
+}
+
+/* ===========================
+   NOTE KHUSUS EXNESS
+=========================== */
+
+.claim-note {
+  max-width: 820px;
+  margin: 70px auto 0;
+  padding: 26px 30px;
+  border-radius: 18px;
+  background:
+    linear-gradient(180deg, #020617, #020617),
+    radial-gradient(circle at left, rgba(96,165,250,.15), transparent 60%);
+  box-shadow:
+    0 30px 60px rgba(0,0,0,.55),
+    inset 0 0 0 1px rgba(96,165,250,.35);
+}
+
+.claim-note strong {
+  display: block;
+  font-size: 1.15rem;
+  margin-bottom: 10px;
+  color: #60a5fa;
+}
+
+.claim-note p {
+  color: #cbd5f5;
+  line-height: 1.7;
+}
+
+.claim-note a {
+  color: #22c55e;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+.claim-note a:hover {
+  text-decoration: underline;
+}
+
+html {
+  scroll-behavior: smooth;
+}
 
 
   </style>
@@ -658,11 +822,12 @@
   <ul>
     <li>✔ Berbasis rule & logic</li>
     <li>✔ Mengurangi human error</li>
-    <li>✔ Tidak ada license</li>
+    <li>✔ Tidak bayar license</li>
     <li>✔ 100% gratis untuk member Matary</li>
   </ul>
 
-  <a href="https://t.me/mataryclub" class="btn">Pelajari Cara Kerjanya</a>
+  <a href="#backtest" class="btn">Pelajari Cara Kerjanya</a>
+
 </div>
 
 <div class="container">
@@ -748,7 +913,7 @@
 
 
     <!-- SUITABILITY -->
-    <section class="backtest-section">
+    <section class="backtest-section" id="backtest">
   <h2>Hasil Backtest EA</h2>
   <p>
     Berikut adalah ringkasan hasil backtest sebagai gambaran performa historis.
@@ -836,6 +1001,66 @@
       </iframe>
 
 
+  </div>
+</section>
+
+<!-- CARA KLAIM EA -->
+<section class="claim-ea">
+  <div class="container">
+    <h2>Cara Klaim EA MATARY</h2>
+    <p class="subtitle">
+      Ikuti langkah berikut untuk mendapatkan akses EA MATARY.
+    </p>
+
+    <div class="claim-steps">
+
+      <div class="claim-step">
+        <span class="step-number">1</span>
+        <h3>Daftar Broker</h3>
+        <p>
+          Daftar broker EXNESS melalui link berikut:<br>
+          <a href="https://one.exnessonelink.com/boarding/sign-up/a/d8f5pvzdnm?lng=id" target="_blank">
+            Klik di sini
+          </a>
+        </p>
+      </div>
+
+      <div class="claim-step">
+        <span class="step-number">2</span>
+        <h3>Tanpa Minimal Deposit</h3>
+        <p>
+          Deposit berapapun, tidak ada batas minimal.
+        </p>
+      </div>
+
+      <div class="claim-step">
+        <span class="step-number">3</span>
+        <h3>Kirim No Akun Cent & SS Balance</h3>
+        <p>
+          No akun: <strong>123456</strong><br>
+          SS Balance: Screenshot akun trading
+        </p>
+      </div>
+
+      <div class="claim-step">
+        <span class="step-number">4</span>
+        <h3>Kirim ke Telegram</h3>
+        <p>
+          Kirim data ke Telegram:<br>
+          <a href="https://t.me/mataryclub" target="_blank">@mataryclub</a>
+        </p>
+      </div>
+      
+      <div class="claim-note">
+  <strong>ℹ️ Catatan Penting</strong>
+  <p>
+    Jika Anda <b>sudah memiliki akun broker EXNESS</b>,  
+    silakan langsung chat ke <a href="https://t.me/matary_bot" target="_blank">@matary_bot</a>  
+    lalu pilih perintah <b>/ganti</b> dan ikutin panduannya.
+  </p>
+</div>
+
+    </div>
   </div>
 </section>
 
