--- a/index.html
+++ b/index.html
@@ -772,6 +772,59 @@ html {
   scroll-behavior: smooth;
 }
 
+/* DISCLAIMER POPUP */
+.disclaimer-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.75);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  backdrop-filter: blur(6px);
+}
+
+.disclaimer-box {
+  background: linear-gradient(180deg, #020617, #000);
+  border: 1px solid rgba(34,197,94,0.3);
+  border-radius: 16px;
+  max-width: 480px;
+  padding: 28px;
+  color: #e5e7eb;
+  box-shadow: 0 30px 80px rgba(0,0,0,.6);
+}
+
+.disclaimer-box h3 {
+  color: #22c55e;
+  margin-bottom: 12px;
+}
+
+.disclaimer-box ul {
+  margin: 16px 0;
+  padding-left: 18px;
+}
+
+.disclaimer-box li {
+  margin-bottom: 6px;
+}
+
+.disclaimer-box .small {
+  font-size: 13px;
+  color: #94a3b8;
+  margin-bottom: 20px;
+}
+
+.disclaimer-box button {
+  width: 100%;
+  padding: 14px;
+  border-radius: 999px;
+  border: none;
+  background: linear-gradient(90deg,#22c55e,#16a34a);
+  color: #052e16;
+  font-weight: 600;
+  cursor: pointer;
+}
+
 
   </style>
 </head>
@@ -791,6 +844,50 @@ html {
     document.getElementById("backtestModal").classList.remove("active");
   }
 </script>
+
+<!-- DISCLAIMER POPUP -->
+<div id="disclaimerPopup" class="disclaimer-overlay">
+  <div class="disclaimer-box">
+    <h3>⚠️ Disclaimer Komunitas MATARY</h3>
+
+    <p>
+      <strong>EA MATARY & Komunitas MATARY bersifat 100% GRATIS.</strong>
+    </p>
+
+    <ul>
+      <li>❌ Tidak ada kelas berbayar</li>
+      <li>❌ Tidak ada mentoring berbayar</li>
+      <li>❌ Tidak ada titip dana / pengelolaan dana</li>
+      <li>❌ Tidak ada penjualan sinyal trading</li>
+      <li>❌ Tidak menjanjikan profit instan</li>
+    </ul>
+
+    <p>
+      Komunitas MATARY adalah <strong>wadah diskusi & sharing</strong>
+      antar trader untuk belajar disiplin, manajemen risiko,
+      dan eksekusi trading berbasis rule.
+    </p>
+
+    <p class="small">
+      Trading memiliki risiko. Segala keputusan trading merupakan
+      tanggung jawab masing-masing individu.
+      Bergabung ke komunitas MATARY sepenuhnya
+      atas <strong>kesadaran pribadi</strong>, tanpa paksaan dari pihak mana pun.
+    </p>
+
+    <button id="acceptDisclaimer">Saya Mengerti & Lanjutkan</button>
+  </div>
+</div>
+
+<footer>
+  <p style="font-size:12px;color:#64748b;text-align:center">
+    Trading forex memiliki risiko tinggi. Konten ini bersifat edukasi.
+  </p>
+
+  <p style="font-size:12px;color:#64748b;text-align:center">
+    MATARY bukan lembaga investasi, bukan pengelola dana, dan tidak menjual layanan trading berbayar.
+  </p>
+</footer>
 
 <body>
 
