--- a/join-matary.html
+++ b/join-matary.html
@@ -281,47 +281,191 @@
   display: block;
 }
 
-/* ===========================
-   NOTE KHUSUS EXNESS
-=========================== */
-
-.claim-note {
-  max-width: 820px;
-  margin: 70px auto 0;
-  padding: 26px 30px;
-  border-radius: 18px;
-  background:
-    linear-gradient(180deg, #020617, #020617),
-    radial-gradient(circle at left, rgba(96,165,250,.15), transparent 60%);
-  box-shadow:
-    0 30px 60px rgba(0,0,0,.55),
-    inset 0 0 0 1px rgba(96,165,250,.35);
+/* TESTI */
+.testimoni-section {
+  padding: 100px 20px;
+  text-align: center;
 }
 
-.claim-note strong {
-  display: block;
-  font-size: 1.15rem;
+.testimoni-section h2 {
+  font-size: 2.2rem;
   margin-bottom: 10px;
-  color: #60a5fa;
 }
 
-.claim-note p {
-  color: #cbd5f5;
-  line-height: 1.7;
+.testimoni-section .subtext {
+  color: #94a3b8;
+  margin-bottom: 50px;
 }
 
-.claim-note a {
+.testimoni-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 24px;
+  align-items: start;
+}
+
+.testimoni-card {
+  flex: 0 0 auto;
+  width: 260px;              /* 🔥 lebih kecil & rapi */
+  height: 520px;             /* 🔥 tinggi dikunci */
+  background: rgba(255,255,255,0.04);
+  border-radius: 18px;
+  padding: 12px;
+  scroll-snap-align: start;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.testimoni-card img {
+  width: 100%;
+  border-radius: 14px;
+  margin-bottom: 15px;
+  cursor: pointer;
+  transition: transform .3s ease;
+}
+
+.testimoni-card img:hover {
+  transform: scale(1.03);
+}
+
+.testimoni-card p {
+  color: #e5e7eb;
+  font-size: 0.95rem;
+}
+
+.testimoni-scroll {
+  display: flex;
+  gap: 20px;
+  overflow-x: auto;
+  padding: 24px 4px 40px;
+  scroll-snap-type: x mandatory;
+}
+
+.testimoni-scroll::-webkit-scrollbar {
+  height: 6px;
+}
+
+.testimoni-scroll::-webkit-scrollbar-thumb {
+  background: rgba(255,255,255,0.15);
+  border-radius: 10px;
+}
+
+/* CARD */
+.testimoni-card {
+  flex: 0 0 auto;            /* 🔥 JANGAN MENYEMPIT */
+  width: 280px;              /* 🔥 UKURAN AMAN */
+  scroll-snap-align: start;
+  background: rgba(255,255,255,0.03);
+  border-radius: 18px;
+  padding: 12px;
+}
+
+.testimoni-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 14px;
+}
+
+.testimoni-section {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 80px 24px;
+}
+
+/* DISCLAIMER POPUP */
+.disclaimer-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.75);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  backdrop-filter: blur(6px);
+}
+
+.disclaimer-box {
+  background: linear-gradient(180deg, #020617, #000);
+  border: 1px solid rgba(34,197,94,0.3);
+  border-radius: 16px;
+  max-width: 480px;
+  padding: 28px;
+  color: #e5e7eb;
+  box-shadow: 0 30px 80px rgba(0,0,0,.6);
+}
+
+.disclaimer-box h3 {
   color: #22c55e;
-  font-weight: 700;
-  text-decoration: none;
+  margin-bottom: 12px;
 }
 
-.claim-note a:hover {
-  text-decoration: underline;
+.disclaimer-box ul {
+  margin: 16px 0;
+  padding-left: 18px;
 }
+
+.disclaimer-box li {
+  margin-bottom: 6px;
+}
+
+.disclaimer-box .small {
+  font-size: 13px;
+  color: #94a3b8;
+  margin-bottom: 20px;
+}
+
+.disclaimer-box button {
+  width: 100%;
+  padding: 14px;
+  border-radius: 999px;
+  border: none;
+  background: linear-gradient(90deg,#22c55e,#16a34a);
+  color: #052e16;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+
 
   </style>
 </head>
+
+<!-- DISCLAIMER POPUP -->
+<div id="disclaimerPopup" class="disclaimer-overlay">
+  <div class="disclaimer-box">
+    <h3>⚠️ Disclaimer Komunitas MATARY</h3>
+
+    <p>
+      <strong>EA MATARY & Komunitas MATARY bersifat 100% GRATIS.</strong>
+    </p>
+
+    <ul>
+      <li>❌ Tidak ada kelas berbayar</li>
+      <li>❌ Tidak ada mentoring berbayar</li>
+      <li>❌ Tidak ada titip dana / pengelolaan dana</li>
+      <li>❌ Tidak ada penjualan sinyal trading</li>
+      <li>❌ Tidak menjanjikan profit instan</li>
+    </ul>
+
+    <p>
+      Komunitas MATARY adalah <strong>wadah diskusi & sharing</strong>
+      antar trader untuk belajar disiplin, manajemen risiko,
+      dan eksekusi trading berbasis rule.
+    </p>
+
+    <p class="small">
+      Trading memiliki risiko. Segala keputusan trading merupakan
+      tanggung jawab masing-masing individu.
+      Bergabung ke komunitas MATARY sepenuhnya
+      atas <strong>kesadaran pribadi</strong>, tanpa paksaan dari pihak mana pun.
+    </p>
+
+    <button id="acceptDisclaimer">Saya Mengerti & Lanjutkan</button>
+  </div>
+</div>
+
 
 <body>
 
@@ -385,6 +529,40 @@
   </div>
 </section>
 
+<section class="testimoni-section" id="testimoni">
+  <div class="container">
+    <h2>Diskusi Member MATARY?</h2>
+    <p class="subtext">
+      Cuplikan aktivitas dari member komunitas.
+    </p>
+
+    <div class="testimoni-scroll">
+      <div class="testimoni-card">
+        <img src="assets/img/testimoni-1.png" alt="Testimoni MATARY 1">
+      </div>
+
+      <div class="testimoni-card">
+        <img src="assets/img/testimoni-2.png" alt="Testimoni MATARY 2">
+      </div>
+
+      <div class="testimoni-card">
+        <img src="assets/img/testimoni-3.png" alt="Aktivitas Grup MATARY">
+      </div>
+
+      <div class="testimoni-card">
+        <img src="assets/img/testimoni-4.png" alt="Aktivitas Grup MATARY">
+      </div>
+
+      <div class="testimoni-card">
+        <img src="assets/img/testimoni-5.png" alt="Aktivitas Grup MATARY">
+      </div>
+
+      <div class="testimoni-card">
+        <img src="assets/img/testimoni-6.png" alt="Aktivitas Grup MATARY">
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- HOW TO JOIN -->
 <section class="join-section">
@@ -432,16 +610,7 @@
         <p>Kirim ke <a href="https://t.me/mataryclub" target="_blank">@mataryclub</a></p>
       </div>
     </div>
-
-    <div class="claim-note">
-  <strong>ℹ️ Catatan Penting</strong>
-  <p>
-    Jika Anda <b>sudah memiliki akun broker EXNESS</b>,  
-    silakan langsung chat ke <a href="https://t.me/matary_bot" target="_blank">@matary_bot</a>  
-    lalu pilih perintah <b>/ganti</b> dan ikutin panduannya.
-  </p>
-</div>
-
+    
   </div>
 </section>
 
