--- a/join-matary.html
+++ b/join-matary.html
@@ -469,6 +469,118 @@
   border-radius:10px;
 }
 
+/* =========================
+   DISCLAIMER OVERLAY
+========================= */
+.disclaimer-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.75);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+/* =========================
+   DISCLAIMER BOX (DESKTOP)
+========================= */
+.disclaimer-box {
+  background: #0b1220;
+  border: 1px solid #22c55e;
+  border-radius: 20px;
+  padding: 28px;
+  width: 100%;
+  max-width: 420px;
+  color: #e5e7eb;
+  box-shadow: 0 0 40px rgba(34,197,94,0.25);
+}
+
+/* Judul */
+.disclaimer-box h3 {
+  font-size: 18px;
+  color: #22c55e;
+  margin-bottom: 12px;
+}
+
+/* Paragraf */
+.disclaimer-box p {
+  font-size: 14px;
+  line-height: 1.6;
+  margin-bottom: 12px;
+}
+
+/* List */
+.disclaimer-box ul {
+  padding-left: 18px;
+  margin-bottom: 14px;
+}
+
+.disclaimer-box ul li {
+  font-size: 14px;
+  margin-bottom: 8px;
+}
+
+/* Warning box */
+.disclaimer-warning {
+  background: rgba(245, 158, 11, 0.12);
+  border: 1px dashed #f59e0b;
+  border-radius: 12px;
+  padding: 12px;
+  font-size: 13px;
+  color: #fde68a;
+  margin: 14px 0;
+}
+
+/* Tombol */
+.agree-btn {
+  width: 100%;
+  background: #22c55e;
+  color: #052e16;
+  border: none;
+  border-radius: 999px;
+  padding: 14px;
+  font-size: 15px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.agree-btn:hover {
+  background: #16a34a;
+}
+
+/* =========================
+   MOBILE OPTIMIZATION
+========================= */
+@media (max-width: 768px) {
+
+  .disclaimer-box {
+    max-width: 92%;
+    padding: 18px 16px;
+    border-radius: 16px;
+    max-height: 85vh;
+    overflow-y: auto;
+  }
+
+  .disclaimer-box h3 {
+    font-size: 16px;
+  }
+
+  .disclaimer-box p,
+  .disclaimer-box ul li {
+    font-size: 13px;
+  }
+
+  .disclaimer-warning {
+    font-size: 12px;
+    padding: 10px;
+  }
+
+  .agree-btn {
+    font-size: 14px;
+    padding: 12px;
+  }
+}
 
 
 
@@ -625,17 +737,34 @@
       <div class="step-number">1</div>
       <div class="step-content">
         <h4>Daftar Broker</h4>
+
         <p>
-  Daftar EXNESS:
-  <a href="https://one.exnessonelink.com/boarding/sign-up/a/d8f5pvzdnm?lng=id"
-     target="_blank"
-     onclick="gtag('event', 'click_register_broker', {
-       event_category: 'Broker',
-       event_label: 'EXNESS'
-     });">
-     Klik di sini
-  </a>
-</p>
+          Daftar EXNESS:
+          <a href="https://one.exnessonelink.com/boarding/sign-up/a/d8f5pvzdnm?lng=id"
+             target="_blank"
+             onclick="gtag('event', 'click_register_broker', {
+               event_category: 'Broker',
+               event_label: 'EXNESS'
+             });">
+            Klik di sini
+          </a>
+        </p>
+
+        <p>
+          Daftar Broker Lokal (MIFX):
+          <a href="https://mifx.com/live/r/matary"
+             target="_blank"
+             onclick="gtag('event', 'click_register_broker', {
+               event_category: 'Broker',
+               event_label: 'MIFX'
+             });">
+            Klik di sini
+          </a>
+        </p>
+
+        <small style="color:#94a3b8">
+          ✔️  Pilih broker internasional atau lokal (BAPPEBTI)
+        </small>
 
       </div>
     </div>
