--- a/join-matary.html
+++ b/join-matary.html
@@ -646,11 +646,13 @@
     <!-- MENU -->
     <ul class="nav-menu">
       <li><a href="/">EA MATARY</a></li>
+      <li><a href="/ea-harian.html">EA HARIAN</a></li>
       <li><a href="/join-matary.html" class="active">Join MATARY</a></li>
     </ul>
 
   </div>
 </nav>
+
 
 
 <!-- HERO -->
@@ -671,8 +673,8 @@
       <div class="join-card bad">
         <h3>❌ GAK PAKE BAYAR-BAYAR!</h3>
         <ul>
-          <li>✖ tidak Bayar</li>
-          <li>✖ tidak ada Minimal deposit</li>
+          <li>✖ Tidak Bayar</li>
+          <li>✖ Tidak ada Minimal deposit</li>
           <li>✖ Tidak ada Langganan</li>
         </ul>
       </div>
