chore: force redeploy github pages

--- a/ea-harian.html
+++ b/ea-harian.html
@@ -1518,7 +1518,7 @@ html {
 <!-- CARA KLAIM EA -->
 <section class="claim-ea">
   <div class="container">
-    <h2>Cara Klaim EA MATARY</h2>
+    <h2>Cara Klaim EA MATARY V3</h2>
     <p class="subtitle">
       Ikuti langkah berikut untuk mendapatkan akses EA MATARY.
     </p>
