fix: resolve merge conflict

--- a/index.html
+++ b/index.html
@@ -645,10 +645,11 @@
 
     <!-- MENU -->
     <ul class="nav-menu">
-      <li><a href="/">JOIN MATARY</a></li>
-      <li><a href="/ea-harian.html">EA HARIAN</a></li>
-      <li><a href="/ea-longterm.html" class="active">EA LONG-TERM</a></li>
-    </ul>
+  <li><a href="/" class="active">JOIN MATARY</a></li>
+  <li><a href="/ea-harian.html">EA HARIAN</a></li>
+  <li><a href="/ea-longterm.html">EA LONG-TERM</a></li>
+  </ul>
+
 
   </div>
 </nav>
