--- a/ea-longterm.html
+++ b/ea-longterm.html
@@ -1114,10 +1114,11 @@ html {
     </a>
 
     <ul class="nav-menu">
-  <li><a href="/" class="active">JOIN MATARY</a></li>
+  <li><a href="/">JOIN MATARY</a></li>
   <li><a href="/ea-harian.html">EA HARIAN</a></li>
-  <li><a href="/ea-longterm.html">EA LONG-TERM</a></li>
-</ul>
+  <li><a href="/ea-longterm.html" class="active">EA LONG-TERM</a></li>
+  </ul>
+
 
 
   </div>
