fix: resolve merge conflict

--- a/ea-longterm.html
+++ b/ea-longterm.html
@@ -1322,7 +1322,7 @@ html {
   <h3>⚠️ Tentang Risiko Margin Call</h3>
 
   <p>
-    EA MATARY HARIAN menggunakan sistem otomatis berbasis rule.
+    EA MATARY LONG-TERM menggunakan sistem otomatis berbasis rule.
     Namun perlu dipahami bahwa <strong>Margin Call adalah risiko nyata</strong>
     dalam trading, terutama pada strategi yang menggunakan
     <strong>penambahan posisi (martingale)</strong>.
