Initial landing page MATARY

--- a/index.html
+++ b/index.html
@@ -582,6 +582,46 @@
   }
 }
 
+/* ===== HAMBURGER MENU ===== */
+.menu-toggle{
+  display:none;
+  font-size:26px;
+  background:none;
+  border:none;
+  color:#22c55e;
+  cursor:pointer;
+}
+
+/* ===== MOBILE ===== */
+@media (max-width: 768px){
+
+  .nav-container{
+    flex-wrap: wrap;
+  }
+
+  .menu-toggle{
+    display:block;
+  }
+
+  .nav-menu{
+    display:none;
+    width:100%;
+    flex-direction:column;
+    text-align:center;
+    margin-top:12px;
+    gap:12px;
+  }
+
+  .nav-menu.active{
+    display:flex;
+  }
+
+  .nav-menu a{
+    padding:10px;
+    font-size:14px;
+  }
+}
+
 
 
   </style>
@@ -631,6 +671,13 @@
   });
 </script>
 
+<script>
+  document.querySelectorAll("#navMenu a").forEach(link => {
+    link.addEventListener("click", () => {
+      navMenu.classList.remove("active");
+    });
+  });
+</script>
 
 <body>
 
@@ -642,15 +689,13 @@
     <a href="/" class="logo">
       <img src="assets/img/logo-matary.png" alt="MATARY Logo">
     </a>
-
+    <button class="menu-toggle" id="menuToggle">☰</button>
     <!-- MENU -->
-    <ul class="nav-menu">
+    <ul class="nav-menu" id="navMenu">
   <li><a href="/" class="active">JOIN MATARY</a></li>
   <li><a href="/ea-harian.html">EA HARIAN</a></li>
   <li><a href="/ea-longterm.html">EA LONG-TERM</a></li>
-  </ul>
-
-
+</ul>
   </div>
 </nav>
 
