Initial landing page MATARY

--- a/ea-harian.html
+++ b/ea-harian.html
@@ -1667,7 +1667,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
   <h3 class="margin-title">
     <a href="#margin-call">
-      ⚠️ Risiko Margin Call
+      ⚠️ RESIKO MARGIN CALL!
     </a>
   </h3>
 
